fixes some of the scrolling overlaps on home page

--- a/static/sass/styles.sass
+++ b/static/sass/styles.sass
@@ -277,7 +277,8 @@ section.banner.main
 section.pitch
 
     .row
-        padding: 2rem 0
+        padding: 8rem 0
+        min-height: 540px
 
 @media screen and ( min-width: 768px )
 
@@ -378,6 +379,8 @@ section.lightbox
     .phone-wrapper
         position: absolute
         margin-left: 100px
+        //position: absolute
+        //margin-left: 100px
 
     .phone-wrapper.sticky
         //position: fixed
@@ -406,7 +409,6 @@ section.lightbox
     &.extra
         padding-top: 6rem
 
-
 @media screen and ( min-width : 768px )
 
     .features
@@ -419,12 +421,22 @@ section.lightbox
             margin-bottom: 0
 
         .content
-            padding: 20px
+            padding: 12px
             border: 1px solid #e9e9e9
             @include border-radius( 8px )
             display: table-cell
             vertical-align: middle
+            height: 80px
+            width: 400px
+
+@media screen and ( min-width : 992px )
+
+    .features
+
+        .content
+            padding: 20px
             height: 150px
+
 
 .flags
     @include unstyled-list()
